# kindle-button-mapper-rs

./: Cargo.toml  README.md  config.ini  install.sh  justfile  kindle-button-mapper.init
.github/workflows/: build-arm.yml
assets/: kindle-button-mapper.upstart
assets/modules/: uinput-4.1.15-lab126-5.18.2-zelda.ko
docs/kindleforge/: README.md  install.sh  uninstall.sh
docs/kindleforge/KindleButtonMapper/: install.sh  uninstall.sh
illusion/: install-waf-app.sh
illusion/MapperManager/: config.xml  index.html  script.js  style.css
scripts/: koreader.sh  setlayout.sh
src/: config.rs  input.rs  layout.rs  main.rs  mapper.rs  vkeyboard.rs  waf_helper.rs
