[package]
name = "kindle-button-mapper"
version = "0.3.0"
edition = "2021"
description = "Maps /dev/input events to script execution for Kindle e-readers"
license = "MIT"

[dependencies]
evdev = "0.12"
configparser = "3"
nix = { version = "0.29", features = ["inotify", "signal"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1
